# Autonomous-Car-TX2-Only-Straight

./: README.md  aces_car.sh
devel/: .catkin  .rosinstall  setup.sh
devel/include/car_v1/: MsgControl.h
devel/lib/car_v1/: car_v1
devel/lib/pkgconfig/: car_v1.pc
devel/lib/python2.7/dist-packages/car_v1/msg/: _MsgControl.py
devel/share/car_v1/cmake/: car_v1-msg-extras.cmake  car_v1-msg-paths.cmake  car_v1Config.cmake
devel/share/common-lisp/ros/car_v1/msg/: MsgControl.lisp  _package.lisp  _package_MsgControl.lisp  car_v1-msg.asd
devel/share/gennodejs/ros/car_v1/msg/: MsgControl.js
devel/share/roseus/ros/car_v1/: manifest.l
devel/share/roseus/ros/car_v1/msg/: MsgControl.l
src/car_v1/: CMakeLists.txt  package.xml
src/car_v1/include/: my_CV.h  my_ZED.h
src/car_v1/src/: main.cpp  my_CV.cpp  my_ZED.cpp
