<?xml version="1.0"?>
<package>
  <name>car_v1</name>
  <version>0.1.0</version>
  <description>The auto_car package</description>
  <maintainer email="chijepark@google.com">chijepark</maintainer>
  <license>Hoban1.1</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
	<build_depend>rosconsole</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>opencv</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>dynamic_reconfigure</build_depend>
	<build_depend>pcl_conversions</build_depend>
	<build_depend>urdf</build_depend>
	<build_depend>nodelet</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>rosconsole</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>opencv</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>dynamic_reconfigure</run_depend>
	<run_depend>pcl_conversions</run_depend>
	<run_depend>nodelet</run_depend>
	<run_depend>robot_state_publisher</run_depend>
  <export>
  </export>
</package>
